@@ -1,3 +1,10 @@
+2007-04-14  Benno Schulenberg  <bensberg-at-justemail-dot-net>
+
+	* unichrome/via_id.c: (ViaDoubleCheckCLE266Revision),
+	(ViaCheckCardId):
+
+	VN -> VM, message tweaks, and trailing white space fixes.
+
 2007-03-04  Benno Schulenberg  <bensberg-at-justemail-dot-net>
 
 	* unichrome/via.man:
